# Ocerus

./: Batlteships.ncb  Batlteships.sln  Batlteships.vcproj  BattleShipsClassDiagram.cd  Battleships.sln  Battleships.vcproj  CMakeLists.txt  CoreLog.txt  HgeLog.txt  README.txt
externalLibs/Box2D/: CMakeLists.txt  version.txt
externalLibs/DbgLib/: CMakeLists.txt
externalLibs/DbgLib/DbgLib/: DbgLib.vcproj  DebugFx.cpp  DebugFx.h  DebugHelp.cpp  DebugHelp.h  LinuxThreads.c  Macros.h  MemLeakDetector.cpp  Utils.cpp  stdafx.h
externalLibs/DbgLib/DbgLibSample/: DbgLibSample.vcproj
externalLibs/DbgLib/Win32/: DbgLib.sln
externalLibs/angelscript/: CMakeLists.txt  version.txt
externalLibs/angelscript/include/: angelscript.h
externalLibs/angelscript/source/: as_arrayobject.cpp  as_arrayobject.h  as_bytecode.h  as_callfunc_arm.cpp  as_callfunc_armasm.asm  as_callfunc_x64_gcc.cpp  as_compiler.cpp  as_config.h  as_context.cpp  as_generic.cpp  as_module.h  as_objecttype.cpp  as_objecttype.h  as_property.h  as_restore.cpp  as_restore.h  as_scriptengine.cpp  as_scriptengine.h  as_scriptfunction.cpp  as_scriptobject.h  as_string_util.cpp
externalLibs/rudeconfig/: CMakeLists.txt  RudeConfig.vcproj
externalLibs/rudeconfig/src/: ConfigImpl.cpp  ParserJuly2004.cpp
libs/ois/: CMakeLists.txt
src/: CMakeLists.txt  Common.h
src/AISystem/: AIMgr.cpp  AIMgr.h  GenericAI.cpp  GenericAI.h  SimpleAI.cpp  SimpleAI.h
src/Core/: Application.cpp  Application.h  Config.cpp  Config.h  Game.cpp  Game.h  LoadingScreen.cpp  LoadingScreen.h  PhysicsDraw.cpp  PhysicsDraw.h  Project.cpp  Project.h  UnitTests.cpp  UnitTests.h  WaterSurface.cpp  WaterSurface.h  main.cpp
src/Editor/: CreateProjectDialog.cpp  CreateProjectDialog.h  EditorGUI.cpp  EditorGUI.h  EditorMenu.cpp  EditorMenu.h  EditorMgr.cpp  EditorMgr.h  EntityWindow.cpp  EntityWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  KeyShortcuts.cpp  KeyShortcuts.h  LayerMgr.cpp  LayerMgr.h  LayerMgrWidget.cpp  LayerMgrWidget.h  LayerWindow.cpp  LayerWindow.h  PopupMenu.cpp  PopupMenu.h  ProjectMgr.cpp  ProjectMgr.h  PrototypeWindow.cpp  PrototypeWindow.h  ResourceWindow.cpp  ResourceWindow.h
src/Editor/PropertyEditors/: AbstractPropertyEditor.cpp  AbstractPropertyEditor.h  AbstractValueEditor.cpp  AbstractValueEditor.h  ArrayStringEditor.h  ArrayStringEditorImpl.h  EntityAttributeModel.cpp  EntityAttributeModel.h  IValueEditor.h  PropertyEditorCreator.cpp  (+7 more)
src/GUISystem/: CEGUICommon.h  CEGUIForwards.h  CEGUIResource.cpp  CEGUIResource.h  CEGUITextureWrapper.cpp  CEGUITextureWrapper.h  CEGUITools.cpp  CEGUITools.h  FolderSelector.cpp  FolderSelector.h  FontMgr.cpp  FontMgr.h  GUIConsole.cpp  GUIConsole.h  GUIMgr.cpp  GUIMgr.h  ImagesetMgr.cpp  ImagesetMgr.h  InputGate.cpp  InputGate.h  ItemListboxProperties.h  MessageBox.cpp  MessageBox.h  PopupMgr.cpp  PopupMgr.h  PromptBox.cpp  PromptBox.h  RendererGate.cpp  RendererGate.h  ResourceGate.cpp  ResourceGate.h  ResourceProvider.cpp  ResourceProvider.h  SchemeMgr.cpp  SchemeMgr.h  ScriptMdl.h  ScriptProvider.cpp  ScriptProvider.h  StaticElements.cpp  StaticElements.h  (+9 more)
src/GfxSystem/: DragDropCameraMover.cpp  DragDropCameraMover.h  GfxRenderer.cpp  GfxRenderer.h  GfxSceneMgr.cpp  GfxSceneMgr.h  GfxStructures.cpp  GfxStructures.h  GfxViewport.cpp  GfxViewport.h  GfxWindow.cpp  GfxWindow.h  HgeTexture.h  IGfxWindowListener.h  IScreenListener.h  IScreenResolutionChangeListener.h  Mesh.cpp  Mesh.h  OGlRenderer.cpp  OGlRenderer.h  OglRenderer.cpp  OglRenderer.h  ParticleResource.cpp  ParticleResource.h  ParticleSystem.cpp  ParticleSystem.h  ParticleSystemMgr.cpp  ParticleSystemMgr.h  PhysicsDraw.cpp  PhysicsDraw.h  RenderTarget.h  ScreenToWorldConverter.h  Texture.cpp  Texture.h  Triangulate.cpp  Triangulate.h  _UnixVoidImpl.cpp
src/InputSystem/: IInputListener.h  InputAction.cpp  InputActions.h  InputMgr.cpp  InputMgr.h  KeyCodes.h  OISListener.cpp  OISListener.h
src/LogSystem/: LogMacros.h  LogMgr.cpp  LogMgr.h  Logger.cpp  Logger.h  Profiler.cpp  Profiler.h
src/Memory/: ClassAllocation.h  FreeList.h  FreeListAllocationPolicies.h  FreeListConstructionPolicies.h  FreeListGrowPolicies.h  FreeListPolicyHelpers.cpp  FreeListPolicyHelpers.h  GlobalAlloc.cpp  GlobalAlloc.h  GlobalAllocation.cpp  GlobalAllocation.h  GlobalAllocation_c.h  MemoryAlloc.h  StlPoolAllocator.h  TestClassAllocation.cpp
src/Precompiled/: Base.h  Common.h  Forwards.h
src/ResourceSystem/: IResourceLoadingListener.h  ImageResource.h  Resource.cpp  Resource.h  ResourceLoadingListener.h  ResourceMgr.cpp  ResourceMgr.h  ResourceTypes.cpp  ResourceTypes.h  UnknownResource.h  XMLOutput.cpp  XMLOutput.h  XMLResource.cpp  XMLResource.h
src/Runner/: StartupProject.h  UnitTests.cpp  UnitTests.h  main.cpp
src/SceneSystem/: GfxWindow.cpp  GfxWindow.h  IScreenListener.h  SceneMgr.cpp  SceneMgr.h  _UnixVoidImpl.cpp
src/ScriptSystem/: ScriptMgr.cpp  ScriptMgr.h  ScriptRegister.cpp  ScriptRegister.h  ScriptResource.cpp  ScriptResource.h
src/Setup/: BasicTypes.h  ComplexTypes.cpp  ComplexTypes.h  Containers.h  Memory.h  Memory_post.h  Memory_pre.h  Platform.h  Settings.h
src/StringSystem/: FileFormat.txt  FormatText.cpp  FormatText.h  StringKey.h  StringMgr.cpp  StringMgr.h  TextData.h  TextResource.cpp  TextResource.h
src/Utility/: BasicTypes.h  ComplexTypes.cpp  ComplexTypes.h  Containers.h  DataContainer.h  Hash.cpp  Hash.h  MathUtils.cpp  MathUtils.h  Properties.h  ResourcePointers.h  Settings.cpp  Settings.h  Singleton.h  SmartAssert.cpp  SmartAssert.h  SmartPointer.h  StateMachine.h  StringConverter.cpp  StringConverter.h  StringKey.cpp  StringKey.h  Timer.cpp  Timer.h  Tree.h
src/Utils/: Array.h  COWPtr.h  Callback.h  DataContainer.h  FilesystemUtils.cpp  FilesystemUtils.h  GlobalProperties.cpp  GlobalProperties.h  Hash.cpp  Hash.h  MathConsts.h  MathUtils.cpp  MathUtils.h  Properties.h  ResourcePointers.h  Singleton.h  SmartAssert.cpp  SmartAssert.h  SmartPointer.h  StateMachine.h  StringConverter.cpp  StringConverter.h  StringKey.cpp  StringKey.h  Timer.cpp  Timer.h  Tree.h  XMLConverter.cpp  XMLConverter.h
(+916 files in other folders)
